# AIR_3D_PLANNING

./: .gitignore  AIR_PLANNING_ARCHITECTURE.md  DENSE50_PLANNING_REPORT.md  DEPLOY_REPORT.md  GITHUB_DEPLOYMENT.md  PX4_INTEGRATION_PLAN.md  README.md  REFERENCE_REPOS.md  UAV_MOTION_DEBUG_REPORT.md  build_log.txt  uav_motion_check_log.txt
benchmark_results/: dense50_benchmark.csv  dense50_benchmark_report.md
config/: aerial_exploration.rviz  aerial_exploration.yaml
launch/: gazebo_dense50.launch.py  test_aerial_exploration_dense50.launch.py  visual_aerial_exploration_dense50.launch.py
reports/: 00_git_repository_diagnosis.md  00_remote_git_check.md  04_dense50_test_report.md  05_coverage_metric_validation.md  06_runbook.md  07_anti_fake_coverage_validation.md  08_simulation_stack_audit.md  09_visual_simulation_smoke_test.md  10_gazebo_error_diagnosis.md  11_gazebo_uav_and_path_visualization.md  12_aerial_corridor_exploration_diagnosis.md  12_aerial_corridor_height_check.md  13_github_sync_baseline.md  14_coverage_and_mapping_reality_diagnosis.md  15_sensor_driven_mapping_and_real_coverage.md  16_sensor_mapping_smoke_test.md  17_observed_coverage_not_fake.md  18_map_export_check.md  22_github_backup_and_reuse.md  23_garage_v1_source_asset_discovery.md  24_garage_v1_virtual_environment_integration.md  25_garage_v1_visibility_and_exploration_improvement.md  27_garage_v1_frontier_backtracking_optimization.md  28_garage_v1_world_loading_and_tare_like_visualization.md  29_garage_v1_adaptive_altitude_planning.md  32_garage_v1_visual_regression_diagnosis.md  33_garage_v1_visual_readability_fix.md  34_garage_v1_rviz_clean_tare_style.md  35_garage_v1_gazebo_camera_and_proxy_usability.md  36_garage_v1_rviz_gazebo_alignment_diagnosis.md  37_garage_v1_structure_cloud_generation.md  38_garage_v1_tare_reference_rviz_view.md  39_tare_v1_rviz_reference_analysis.md  40_tare_rviz_replay_bridge.md  41_garage_reference_pointcloud_preparation.md  (+11 more)
src/aerial_exploration_planner/: package.xml  setup.cfg  setup.py
src/aerial_exploration_planner/aerial_exploration_planner/: aerial_exploration_node.py  exploration_metrics_node.py  garage_structure_cloud_node.py  gazebo_trail_visualizer.py  gazebo_uav_visualizer.py  grid_model.py  mode_manager_node.py  sensor_mapping_node.py  simple_uav_follower_node.py  synthetic_mapping_node.py  tare_rviz_replay_bridge_node.py
src/aerial_exploration_planner/config/: aerial_exploration.yaml  garage_v1_exploration.yaml
src/aerial_exploration_planner/launch/: gazebo_dense50.launch.py  gazebo_garage_v1.launch.py  visual_aerial_exploration_dense50.launch.py  visual_aerial_exploration_garage_v1.launch.py
src/aerial_exploration_planner/models/simple_uav/: model.config  model.sdf
src/aerial_exploration_planner/rviz/: garage_v1_debug.rviz  garage_v1_exploration.rviz  garage_v1_tare_edge_replay.rviz  garage_v1_tare_like.rviz  garage_v1_tare_reference.rviz  garage_v1_tare_v1_replay.rviz  garage_v1_voxel.rviz
src/aerial_exploration_planner/worlds/: dense50_ground_footprint.world
src/air_bringup/: CMakeLists.txt  package.xml
src/air_bringup/config/: air_planning.yaml  air_planning_dense50.yaml
src/air_bringup/launch/: air_dense50_demo.launch.py  air_planning_demo.launch.py
src/air_bringup/rviz/: air_planning.rviz
src/air_global_planner/: package.xml  setup.cfg  setup.py
src/air_global_planner/air_global_planner/: astar_3d_planner.py
src/air_mission_manager/: package.xml  setup.cfg  setup.py
src/air_mission_manager/air_mission_manager/: mission_manager.py
src/air_planning_msgs/: CMakeLists.txt  package.xml
src/air_world_provider/: package.xml  setup.cfg  setup.py
src/air_world_provider/air_world_provider/: world_provider.py
(+113 files in other folders)
