<?xml version="1.0"?>
<package format="3">
  <name>aerial_exploration_planner</name>
  <version>0.2.0</version>
  <description>Minimal aerial 3D autonomous exploration validation package.</description>
  <maintainer email="nuaa@example.com">nuaa</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
