<?xml version="1.0"?>
<package format="3">
  <name>air_planning_msgs</name>
  <version>0.1.0</version>
  <description>Reserved package for future custom aerial planning messages.</description>
  <maintainer email="nuaa@example.com">nuaa</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
