<?xml version="1.0"?>
<package format="3">
  <name>air_world_provider</name>
  <version>0.1.0</version>
  <description>Publishes a deterministic 3D aerial obstacle world for planning demos.</description>
  <maintainer email="nuaa@example.com">nuaa</maintainer>
  <license>MIT</license>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
